[package]
name = "thola"
version = "0.0.1"
authors = ["Ivan Acosta-Rubio <ivan@softwarecriollo.com>"]
description = "LND tool to discover how well connected you are in the Lightning Network"
readme = "README.md"
license = "MIT"
repository = "https://github.com/LightningPeach/lnd-rust"

[dependencies]
protobuf = "2.*"
futures = "0.*"
futures-cpupool = "0.1.*"
tls-api = "0.*"
httpbis = "~0.7"
grpc = "0.5.0"
tls-api-native-tls = "0.1.1"
bytes = "0.*"


hyper = "~0.7"
serde_json = "1.0.11"
serde = "1.0"
serde_derive = "1.0.85"

pbr = "1.0.1"

crossbeam = "0.6"
lazy_static = "1.2.0"
rayon = "1.0.3"


[build-dependencies]
protoc-rust-grpc = "0.5.0"
