[package]
name = "thola"
version = "0.0.1"
authors = ["Ivan Acosta-Rubio <ivan@softwarecriollo.com>"]
description = "LND tool to discover how well connected you are in the Lightning Network"
readme = "README.md"
license = "MIT"
repository = "https://github.com/LightningPeach/lnd-rust"

[dependencies]
protobuf = "2.*"
futures = "0.*"
futures-cpupool = "0.1.*"

tls-api = "0.*"
httpbis = "~0.7"
grpc = "0.5.0"
tls-api-native-tls = "0.1.1"
bytes = "0.*"


threadpool = "1.0"

[build-dependencies]
protoc-rust-grpc = "0.5.0"
